2009-01-05  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR libfortran/38735
	* io/unit.c (get_internal_unit): Set default BLANK= status to NULL for
	internal units.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143102 138bc75d-0d04-0410-961f-82ee72b054a4